# AIGC-TestData-Synth

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: default.json
examples/: samples.json  support_tickets.json
results/: diversity_report.txt
src/aigc_synth/: __init__.py  cli.py  diversity.py  filter.py  generator.py  models.py  provider.py
tests/: test_pipeline.py  test_quality.py
