[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aigc-testdata-synth"
version = "0.1.0"
description = "LLM-based test-data synthesis with diversity control and quality filtering"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "李想 (Lixiang)" }]
keywords = [
    "aigc",
    "test-data",
    "synthetic-data",
    "llm",
    "data-generation",
    "quality-assurance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
aigc-testdata-synth = "aigc_synth.cli:main"

[project.urls]
Homepage = "https://github.com/Lixiang878/aigc-testdata-synth"
Repository = "https://github.com/Lixiang878/aigc-testdata-synth"
Issues = "https://github.com/Lixiang878/aigc-testdata-synth/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
